--- a/home/templates/cruds/tabelas/datatable.html
+++ b/home/templates/cruds/tabelas/datatable.html
@@ -1,19 +1,18 @@
 {% extends '../../base.html' %}
 {% load static %}
 
-{% block estilo %}
-  <style>
-    .fas_hover:hover{
-      color: black;
-    }
-  </style>
-
-{% endblock estilo %}
-
 {% block content %}
 <div class="card">
     <div class="card-header">
-      <h3 class="card-title">{{titulo_card}}</h3>
+      <div class="row">
+        <div class="col-md-6">
+          <h3 class="card-title">{{titulo_card}}</h3>
+        </div>  
+        <div class="col-md-6">
+          <a href="{{url_cadastro}}" class='btn btn-success' style='float: right;'>{{descricao_botao_novo}}</a>
+        </div>  
+      </div>
+      
     </div>
     <!-- /.card-header -->
     <div class="card-body">
@@ -23,7 +22,7 @@
             {% for coluna in colunas %}
               <th>{{coluna}}</th>
             {% endfor %}
-            <th> </th>
+            <th>Ações</th>
           </tr>
         </thead>
         <tbody>
@@ -34,23 +33,30 @@
                 {% endfor %}
               <td>
                 <div class="row marcador align-items-center">
+                  {% if editar %}
+                  <div class="col-lg-4 mx-auto text-center">
+                    <a href="{{url_update}}/{{values.0}}" class="fas_hover">
+                      <i class="fas fa-pencil-alt" style='color: #070454;'></i>
+                    </a>
+                  </div>
+                  {% endif %}
                   {% if aprovar %}
                   <div class="col-lg-4 mx-auto text-center">
-                    <a href="#" class='fas_hover'>
+                    <a href="{{url_aprovar}}/{{values.0}}" class='fas_hover'>
                       <i class="fas fa-thumbs-up" style="color: green;"></i>
                     </a>
                   </div>
                   {% endif %}
                   {% if recusar %}
                   <div class="col-lg-4 mx-auto text-center">
-                    <a href="#" class='fas_hover'>
+                    <a href="{{url_recusar}}/{{values.0}}" class='fas_hover'>
                       <i class="fas fa-hand-paper" style="color: red;"></i>
                     </a>
                   </div>
                   {% endif %}
                   {% if excluir %}
                   <div class="col-lg-4 mx-auto text-center">
-                    <a href="#" class='fas_hover'>
+                    <a href="{{url_delete}}/{{values.0}}" class='fas_hover'>
                       <i class="fas fa-times-circle" style="color: blue;"></i>
                     </a>
                   </div>
@@ -65,7 +71,7 @@
             {% for coluna in colunas %}
               <th>{{coluna}}</th>
             {% endfor %}
-            <th> </th>
+            <th></th>
           </tr>
         </tfoot>
       </table>
